syntax = "proto3";
//import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "com.toisystems.migchat";
option java_outer_classname = "MigchatProto";
option objc_class_prefix = "MGC";

package migchat;

// The service definition.
service ChatRoomService {
  // Sends a reqistration request
  rpc Register (UserInfo) returns (Registration) {}
  // Sends a logout request using the first invitation from the server
  rpc Logout (Registration) returns (Result) {}
  // Asks for invitations
  rpc GetInvitations(RequestInvitations) returns (stream Invitation) {}
  // Asks for contacts list
  rpc GetUsers(RequestUsers) returns (stream UpdateUsers) {}
  // Asks for chats list
  rpc GetChats(RequestChats) returns (stream UpdateChats) {}
  // Starts chating
  rpc StartChating(stream Post) returns (stream Post) {}

  // Creates new chat
  rpc CreateChat(ChatInfo) returns (Chat) {}
  // Invites user to chat
  rpc InviteUser(Invitation) returns (Result) {}
  // Enters the chat
  rpc EnterChat(ChatReference) returns (Result) {}
  // Leaves active chat
  rpc LeaveChat(ChatReference) returns (Result) {}
}

message UserInfo {
  string name = 1;
  string short_name = 2;
}

message Registration {
    uint64 user_id = 1;
}

message RequestInvitations {
    uint64 user_id = 1;
}

message RequestUsers {
    uint64 user_id = 1;
    bool filter_alive = 2;
}

message UpdateUsers {
    repeated User added = 1;
    repeated User gone = 2;
}

message User {
    uint64 user_id = 1;
    string name = 2;
    string short_name = 3;
}

message RequestChats {
    uint64 user_id = 1;
    bool filter_alive = 2;
}

message UpdateChats {
    repeated Chat added = 1;
    repeated Chat gone = 2;
}

message ChatInfo {
    uint64 user_id = 1;
    bool permanent = 2;
    string description = 3;
    bool auto_enter = 4;
    repeated uint64 desired_users = 5;
}

message Chat {
    uint32 chat_id = 1;
    bool permanent = 2;
    string description = 3;
    repeated uint64 users = 4;
}

message ChatReference {
    uint64 user_id = 1;
    uint32 chat_id = 2;
}

message Invitation {
    uint64 from_user_id = 1;
    uint64 to_user_id = 2;
    uint32 chat_id = 3;
}

message Result {
    bool ok = 1;
    string description = 2;
}

enum AttachmentType {
    None = 0;
    Image = 1;
    Audio = 2;
    Video = 3;
    File = 4;
}

message Attachment {
    AttachmentType type = 1;
    string name = 2;
    bytes content = 3;
}

message Post {
    uint32 chat_id = 1;
    uint64 user_id = 2;
    string text = 3;
    repeated Attachment attachments = 4;
}